--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="VibeDownloader is a free, ad-free Android app that allows you to download videos from YouTube, Instagram, TikTok, Facebook, Spotify and X (Twitter) in premium quality. No watermarks, easy to use!" />
     <meta name="keywords" content="video downloader, YouTube downloader, Instagram downloader, TikTok downloader, Facebook downloader, download videos, Android app, free video downloader, premium downloader, no ads" />
     <meta name="author" content="VibeDownloader" />
+    <meta name="google-site-verification" content="PQl9OLYjk-4lC8ot2OULLBZCoY16l3JqF65NLkiXYdU" />
     
     <!-- Favicon -->
     <link rel="icon" href="/images/8031c0f7-2701-4cb3-a727-dc735c0c47b9.png" type="image/png" />
