--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
         ]
       }
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P9VT8YRW55"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P9VT8YRW55');
+</script>
   </head>
 
   <body>
